# nl-chart-agent

./: .gitignore  README.md  railway.json
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml  railway.json
backend/app/: main.py
backend/app/api/: routes.py
backend/app/mcp/: csv_client.py  fred_client.py  owid_client.py  router.py  worldbank_client.py  yahoo_client.py
backend/app/models/: chart_specs.py  responses.py  state.py
backend/app/pipeline/: chart_planner.py  data_fetcher.py  evaluator.py  input_guard.py  orchestrator.py  query_planner.py  renderer.py  schema_reconciler.py
backend/app/utils/: logger.py  sampling.py
backend/data/: country_metadata.csv
frontend/: Dockerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  railway.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ChartDisplay.tsx  ErrorDisplay.tsx  LoadingChart.tsx  PipelineTrace.tsx  ProvenancePanel.tsx  QueryInput.tsx
frontend/src/hooks/: useChart.ts
frontend/src/types/: index.ts
